--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   .pageWithHeader {
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 20px 40px;
     height: 90vh;
     transform: translateY(10vh);
