--- a/src/components/organisms/GameCardAlt3/GameCard.module.scss
+++ b/src/components/organisms/GameCardAlt3/GameCard.module.scss
@@ -12,6 +12,14 @@
     transform: translateY(-5px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   }
+
+  &.selected {
+    transform: rotateY(180deg);
+    .imageWrapper,
+    .info {
+      transform: rotateY(-180deg);
+    }
+  }
 }
 
 .imageWrapper {
