--- a/src/pages/AddedGames/AddedGamesList.module.scss
+++ b/src/pages/AddedGames/AddedGamesList.module.scss
@@ -1,2 +1,79 @@
-.addeGamesList {
+.bookedGamesList {
+  padding: 20px;
+  font-family: Arial, sans-serif;
+
+  h1 {
+    text-align: center;
+    color: #333;
+  }
+
+  .loading {
+    text-align: center;
+    font-size: 18px;
+    color: #666;
+  }
+
+  .noBookings {
+    text-align: center;
+    font-size: 18px;
+    color: #666;
+  }
+
+  .dateSection {
+    margin-top: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+
+    .dateHeader {
+      margin: 0;
+      font-size: 20px;
+      color: #555;
+    }
+
+    .gamesList {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+
+      .gameItem {
+        display: flex;
+        align-items: center;
+        margin-top: 10px;
+        padding: 10px;
+        border-bottom: 1px solid #eee;
+
+        &:last-child {
+          border-bottom: none;
+        }
+
+        .gameImage {
+          width: 60px;
+          height: 60px;
+          border-radius: 8px;
+          margin-right: 15px;
+        }
+
+        .gameDetails {
+          .gameName {
+            margin: 0;
+            font-size: 16px;
+            font-weight: bold;
+            color: #333;
+            text-align: start;
+          }
+          .detailWrapper {
+            display: flex;
+            gap: 10px;
+          }
+          .players {
+            margin: 5px 0 0;
+            font-size: 14px;
+            color: #666;
+          }
+        }
+      }
+    }
+  }
 }
