add: auth with firebase

--- a/src/components/atoms/Button/Button.module.scss
+++ b/src/components/atoms/Button/Button.module.scss
@@ -42,4 +42,14 @@
       background-color: rgb(136, 33, 66);
     }
   }
+
+  &.transparent {
+    background-color: transparent;
+    color: white;
+
+    &:hover {
+      background-color: transparent;
+      opacity: 0.75;
+    }
+  }
 }
