--- a/src/components/atoms/Input/Input.module.scss
+++ b/src/components/atoms/Input/Input.module.scss
@@ -3,4 +3,15 @@
     width: 100%;
     text-align: start;
   }
+  .passwordInput {
+    position: relative;
+    display: flex;
+    align-items: center;
+    .passwordEye {
+      position: absolute;
+      right: 10px;
+      cursor: pointer;
+      color: #666;
+    }
+  }
 }
