--- a/src/components/organisms/Header/Header.module.scss
+++ b/src/components/organisms/Header/Header.module.scss
@@ -1,3 +1,48 @@
+.loginModal {
+  .loginModalContent {
+    background-color: #ffffff;
+    margin: 0 auto;
+    width: 60%;
+    min-width: 400px;
+    padding: 20px;
+    .loginModalHeader {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      h2 {
+        margin: 0;
+        margin-left: 50%;
+      }
+      .closeButton {
+        flex: 0 1;
+        svg {
+          width: 30px;
+          height: 30px;
+          fill: black;
+        }
+      }
+    }
+    .modalContent {
+      width: 50%;
+      margin: 0 auto;
+      form {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        .submitButton {
+          margin-top: 12px;
+        }
+      }
+    }
+  }
+}
+.loadingModal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1100;
+}
+
 .header {
   position: fixed;
   width: 100vw;
@@ -23,6 +68,7 @@
   .nav {
     .navList {
       display: flex;
+      align-items: center;
       list-style: none;
       margin: 0;
       padding: 0;
@@ -46,6 +92,12 @@
           color: #007bff;
           font-weight: bold;
           border-bottom: 2px solid #007bff;
+        }
+        .loginButton {
+          svg {
+            width: 20px;
+            height: 20px;
+          }
         }
       }
     }
