--- a/src/components/organisms/Header/Header.module.scss
+++ b/src/components/organisms/Header/Header.module.scss
@@ -121,10 +121,10 @@
             .profileItem {
               padding-left: 0;
               padding-right: 0;
-              button{
+              button {
                 width: 100%;
               }
-              &:hover{
+              &:hover {
                 background-color: #007bff60;
               }
             }
@@ -174,8 +174,6 @@
         gap: 16px;
 
         .navItem {
-          margin-left: 20px;
-
           a {
             color: #ffffff;
             text-decoration: none;
@@ -192,6 +190,50 @@
             color: #007bff;
             font-weight: bold;
             border-bottom: 2px solid #007bff;
+          }
+
+          .userDropdown {
+            [class*="dropdown-toggle"] {
+              background: none;
+              border: none;
+              color: #ffffff;
+              box-shadow: none;
+              padding: 0;
+              font-size: 16px;
+              font-weight: 500;
+
+              &:hover,
+              &:focus,
+              &:active {
+                background: none;
+                color: #007bff;
+                box-shadow: none;
+              }
+              &::after {
+                display: none;
+              }
+            }
+            .profileMenu {
+              width: 100%;
+              background-color: #69b00b;
+
+              .profileItem {
+                padding-left: 0;
+                padding-right: 0;
+                button {
+                  width: 100%;
+                }
+                &:hover {
+                  background-color: #007bff60;
+                }
+              }
+            }
+          }
+          .loginButton {
+            svg {
+              width: 25px;
+              height: 25px;
+            }
           }
         }
       }
