--- a/src/components/organisms/GameCardAlt3/GameCard.module.scss
+++ b/src/components/organisms/GameCardAlt3/GameCard.module.scss
@@ -31,6 +31,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  .favoriteIcon {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    color: #ff4757;
+    font-size: 24px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
 }
 
 .image {
